feat: add resilient rental chat fallback